--- a/style.css
+++ b/style.css
@@ -47,4 +47,14 @@ body {
     justify-content: center;
     align-items: center;
     border-radius: 20px;
+    padding: 15px;
+    flex-direction: column;
+}
+
+.row1
+{
+    display: flex;
+    background-color: lightblue;
+    width: 300px;
+    height: 50px;
 }
