--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 
 .calculator
 {
-    height: 500px;
+    height: 400px;
     width: 300px;
     background-color: darkslateblue;
     display: flex;
@@ -57,4 +57,92 @@ body {
     background-color: lightblue;
     width: 300px;
     height: 50px;
+}
+
+.row2
+{
+    display: flex;
+    width: 300px;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+}
+
+.row3
+{
+    display: flex;
+    width: 300px;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+}
+
+.row4
+{
+    display: flex;
+    width: 300px;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+}
+
+.row5
+{
+    display: flex;
+    width: 300px;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+}
+
+.row6
+{
+    display: flex;
+    width: 300px;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+}
+
+.one,
+.two,
+.three,
+.four,
+.five,
+.six,
+.seven,
+.eight,
+.nine,
+.divide,
+.multiply,
+.plus
+{
+   justify-content: center;
+   align-content: center;
+   height: 50px;
+   width: 75px;
+   background-color: orange;
+   font-size: 25px;
+}
+
+
+.zero,
+.clear
+{
+    width: 225px;
+    height: 50px;
+    background-color: orange;
+    font-size: 25px;
+}
+
+
+.minus,
+.equal
+{
+    justify-content: center;
+    align-content: center;
+    height: 50px;
+    width: 75px;
+    background-color: orange;
+    font-size: 25px;
 }
