--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ body {
     align-items: center;
     width: 230px;
     height: 50px;
-    background-color: orange;
+    background-color: brown;
     font-size: 25px;
     border: 1px solid darkslateblue;
 }
