--- a/style.css
+++ b/style.css
@@ -53,6 +53,10 @@ body {
     background-color: lightblue;
     width: 300px;
     height: 50px;
+    justify-content: right;
+    align-items: center;
+    color: #333;
+
 }
 
 .row2
@@ -173,4 +177,10 @@ body {
    background-color: limegreen;
    font-size: 25px;
    border: 1px solid darkslateblue;
+}
+
+.display
+{
+    font-size: 25px;
+    color: #333;
 }
